# posenet-tf

./: Dockerfile  JenkinsConstants.groovy  Jenkinsfile  LICENSE  README.md  ai4-metadata.yml  metadata.json  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.sqa/: config.yml  docker-compose.yml
ai4os_posenet_tf/: README.md  __init__.py  config.py  utils.py
api/: __init__.py  config.py
bandit/: index.html
docker/jupyter/: jupyter_notebook_config.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-ai4os_posenet_tf_start.ipynb
posenetclas/: api.py  config.py  constants.py  decode.py  decode_multi.py  model.py  models.py  paths.py  test_utils.py  utils.py
posenetclas/converter/: config.py  tfjs2python.py  wget.py
posenetclas/tests/: get_test_images.py  main.py
tests/: README.md  conftest.py  test_api.py
tests/test_metadata/: test_requirements.py
tests/test_predictions/: conftest.py
