[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4os-posenet-tf"
authors = [
    { name = "Lara Lloret (CSIC)", email = "lloret@ifca.unican.es" },
]
description = "This is a plug-and-play tool to predict human poses in images."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/ai4os-posenet-tf"
"Bug Tracker" = "https://github.com/ai4os-hub/ai4os-posenet-tf/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "AI4OS_POSENET_TF_DATA_PATH=tests/data",
    "AI4OS_POSENET_TF_MODELS_PATH=tests/models",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = [
    "ai4os_posenet_tf",
    "ai4os_posenet_tf.api",
]

[tool.setuptools.package-dir]
"ai4os_posenet_tf.api" = "api"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
ai4os_posenet_tf = "ai4os_posenet_tf.api"
